Base of data parsing and error prevention

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,13 @@
 @import "globalVariables.scss";
 
-body {
+body, html {
   font-family: 'Raleway';
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
+
 .container {
   text-align: center;
   display: flex;
