--- a/src/views/Main/styles.scss
+++ b/src/views/Main/styles.scss
@@ -1,12 +1,14 @@
-.container {
-  &:hover {
-    cursor: pointer;
-  }
+.main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
-  .messages {
-    padding: 1em;
-    .error {
-      color: red;
-    }
+  .step-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
   }
 }
