--- a/src/components/FileParser/styles.scss
+++ b/src/components/FileParser/styles.scss
@@ -1,10 +1,12 @@
 .file-parser {
     max-height: 800px;
     overflow: auto;
+    display: flex;
+    flex-direction: row;
+
 
 
   .errors {
-
     .title {
       margin-bottom: 1em;
       font-weight: 600;
@@ -20,6 +22,16 @@
       margin-bottom: 1em;
       height: 100%;
       color: red;
+    }
+  }
+
+  .selects {
+    margin-left: 2em;
+    display: flex;
+    flex-direction: column;
+
+    .select-title {
+      margin-top: 1em;
     }
   }
   
